# traffic-net

./: .gitignore  Dockerfile.rpi  README.md  config.json  docker-compose-rpi.yml  docker-compose.yml  requirements-detect.txt  requirements-rpi.txt
anomaly_detection/: Dockerfile  config.json  pyproject.toml
anomaly_detection/anomaly_detection/: __main__.py  models.py  pipeline.py  plotting.py  preprocess.py
common_utils/: pyproject.toml
common_utils/common_utils/: file_manager.py  scheduler.py
configs/: train_yolov8n.json
data_ingestion/: Dockerfile  config.json  pyproject.toml
data_ingestion/data_ingestion/: __main__.py  downloader.py  preprocessor.py
notebooks/: README.md  anomaly_detection.ipynb  detection_analysis.ipynb  dev_anomaly_pipeline.ipynb  object_detection.ipynb  traffic_analysis.ipynb
object_detection/: Dockerfile  config.json  pyproject.toml
object_detection/object_detection/: __main__.py  generate_time_series.py
scripts/: README.md  add_annotations.py  data_injestion.py  generate_time_series.py  generate_timeseries.py  preprocess.py  train_ultralytics.py
src/: README.md  add_annotations.py  data_injestion.py  preprocess.py  subsample_data.py  train_ultralytics.py  train_yolov8.py
src/detection/: generate_time_series.py
src/time_series/: models.py  plotting.py
