[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "anomaly_detection"
version = "0.0.0"
packages = [{ include = "anomaly_detection"}] 
description = "Contains all the code for anomaly detection of the traffic-net project"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = ">=2.0.0"
numpy = "<2.0.0,>=1.0.0"
pandas = ">=1.0.0"
scikit-learn = ">=0.24.0"
pmdarima = ">=1.0.0"
joblib = ">=1.0.0"
tqdm = ">=4.0.0"
common_utils = {path = "../common_utils", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
mlflow = ">=2.0.0"
seaborn = ">=0.0.0"
ipykernel = ">=6.0.0"